tests/interpreter/assert-statement-triggers.stderr
error: assertion failed
 --> $DIR/assert-statement-triggers.lox:1:1
  |
1 | assert false;
  | ^^^^^^^^^^^^^
